# loaners

./: CMakeLists.txt  loanswidgets.cpp  loanswidgets.h  loanswidgets.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  personwidget.cpp  personwidget.h  personwidget.ui  rtllineedit.cpp  rtllineedit.h
